# bkes

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  defaults.sh  docker-compose.yaml
.github/workflows/: java-release.yml
java-client/: pom.xml
java-client/src/main/java/tech/gklijs/bkes/client/: BlockingClient.java  FutureClient.java
java-client/src/test/java/tech/gklijs/bkes/client/: TestClient.java
proto/: api.proto
resources/: produce-no-bkes.puml  produce-with-bkes.puml  restore-no-bkes.puml  restore-with-bkes.puml
src/: error.rs  grpc.rs  kafka_consumer.rs  kafka_producer.rs  main.rs  storage.rs  util.rs
