[package]
name = "bkes"
version = "0.1.0"
authors = ["Gerard Klijs <g.klijs@gmail.com>"]
edition = "2018"

[dependencies]

env_logger = "0.8"
log = "0.4"
sled = "0.34"
prost = "0.7"
rdkafka = { version = "0.26", features = ["cmake-build"] }
tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
tonic = "0.4"

[build-dependencies]
tonic-build = "0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"